fix video overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -123,7 +123,7 @@ video,
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 60vh;
 }
 
 .video-js,
